--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Rentomojo</title>
+    <title>Interactive-App-COMP2106</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
